# qt-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  app.icns  app.rc  main.cpp  readme.md  styles.qrc  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  macos-build.yml  windows-build.yml
3rd/elawidget/lib/: elawidgettools.lib
3rd/elawidget/lib/msvc/: elawidgettools.lib
3rd/include/: QTXdmaApi.h
3rd/qwindowkit/lib/: libQWKCore.dylib  libQWKWidgets.dylib
3rd/qwindowkit/lib/clang/: libQWKCore.dylib  libQWKWidgets.dylib
3rd/qwindowkit/lib/cmake/QWindowKit/: QWindowKitConfigVersion.cmake  QWindowKitTargets-release.cmake
3rd/qwindowkit/lib/msvc/: QWKCore.lib  QWKCored.lib  QWKWidgets.lib  QWKWidgetsd.lib
cmake/: build_config.cmake  packaging.cmake  project_settings.cmake  sources.cmake  version_control.cmake
cmake/core/: compiler.cmake  options.cmake  platform.cmake  utilities.cmake
cmake/features/: dependencies.cmake  qt.cmake  resources.cmake  testing.cmake
cmake/packaging/: common.cmake  linux.cmake  macos.cmake  windows.cmake
cmake/templates/: version.h.in
docs/: development-guide.md
installer/: shortcuts.wxs.in
qt_src/: BoardController.cpp  BoardController.h  BoardHardwareInterface.cpp  BoardHardwareInterface.h  Pub.cpp  Pub.h
qt_ui/: mainwindow.ui
res/: icon.qrc  qwindowkit.qrc
res/icon/macos/: Info.plist.in
res/icon/windows/: app.rc.in  shortcuts.wxs
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/qml/: MyCustomWidget.qml  QmlManager.cpp  QmlManager.h  qml.qrc
src/shared/resources/: shared.qrc
src/shared/styles/: dark-style.qss  light-style.qss  style.qrc
src/shared/widgetframe/: windowframemanager.cpp  windowframemanager.h
src/utils/: debouncer.h  theme_manager.cpp  theme_manager.h
src/utils/json/: json_utils.cpp  json_utils.h
src/utils/setting/: QJsonSettings.cpp  QJsonSettings.h  settings_helper.h
src/utils/theme/: theme_manager.cpp  theme_manager.h
src/widgets/: windowbar.cpp  windowbutton.cpp  windowbutton.h
style/: reset.qss  style.qrc
styles/: combox.qss  pushbutton.qss  spinbox.qss
ui/: mainwindow.ui
